[package]
name = "rusty-car"
version = "0.1.0"
authors = ["Martin <me@visgean.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "3.1.0"
#i2c-linux = "0.1.2"
pwm-pca9685 = "0.3"
linux-embedded-hal = "0.3"

gilrs = "0.8.0"